# SkeletalAnim_Test

./: Animator.cpp  Animator.hpp  CMakeLists.txt  Graph.cpp  Graph.hpp  Join.hpp  JoinRenderer.cpp  JoinRenderer.hpp  README.md  SkinRenderer.cpp  SkinRenderer.hpp  WindFx_Glsl.hpp  WindRenderer.cpp  WindRenderer.hpp  main.cpp  math_vector.cpp
maths/: math_vector.cpp  math_vector.hpp
rendering/: JoinRenderer.cpp  JoinRenderer.hpp  JointDrawable.cpp  JointDrawable.hpp  SkinDrawable.cpp  SkinDrawable.hpp  SkinRenderer.cpp  SkinRenderer.hpp  WeightDrawable.cpp  WeightDrawable.hpp  WindFx.cpp  WindFx.hpp  WindFx_Glsl.hpp  WindRenderer.cpp  vertex_shader.hpp
rigging/: Animator.cpp  Animator.hpp  Graph.cpp  Graph.hpp  Join.cpp  Joint.cpp  Joint.hpp
